# niskala

./: .gitignore  =0.3.0  CHANGELOG.md  CMakeLists.txt  COMPLETION_REPORT.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  PHASE1_SUMMARY.md  PHASE2_SUMMARY.md  PHASE3_SUMMARY.md  PHASE4_SUMMARY.md  PHASE5_SUMMARY.md  PHASE6_SUMMARY.md  PHASE7_SUMMARY.md  QUICKSTART.md  README.md  STATUS.md  docker-compose.prod.yml  docker-compose.yml  quick_check.sh  requirements-minimal.txt  requirements.txt  setup.sh  verify.sh
.github/workflows/: ci.yml
config/: default.json  idx_tickers.json  sector_mapping.json
docs/: API.md  UI_WIDGETS.md
gcp/: Dockerfile.api  Dockerfile.worker  backup.sh  deploy.sh  restore.sh  setup.sh
mobile/: App.tsx  README.md  package.json
mobile/src/components/: FearGreedGauge.tsx  StockCard.tsx
mobile/src/screens/: FearGreedScreen.tsx  NewsFeedScreen.tsx  PriceAlertsScreen.tsx  SettingsScreen.tsx  WatchlistScreen.tsx
mobile/src/services/: api.ts
mobile/src/store/: watchlistSlice.ts
mobile/src/types/: index.ts
nginx/: nginx.conf
python/: __init__.py  worker.py
python/ai/: __init__.py  finbert_analyzer.py  llm_interpreter.py  news_scraper.py  regime_detector.py  sentiment_pipeline.py
python/ai/advanced/: __init__.py  anomaly_detector.py  fraud_detector.py  lstm_predictor.py  multi_modal.py  rl_agent.py  transformer_forecaster.py
python/ai/models/: __init__.py  market_impact_model.py  model_deployer.py  model_registry.py  model_trainer.py
python/ai/nlp/: __init__.py  indo_preprocessor.py  social_scraper.py
python/analytics/: __init__.py  chart_engine.py  correlation.py  pattern_alerts.py  pattern_recognition.py  screener.py  stock_detail.py
python/api/: __init__.py  server.py
python/api/middleware/: __init__.py  auth_middleware.py  rate_limiter.py
python/api/routes/: __init__.py  auth_routes.py  broker_routes.py  market_routes.py  trading_routes.py
python/api/websocket/: __init__.py
python/broker/: __init__.py  account_sync.py  ajaib_broker.py  base_broker.py  execution_tracker.py  order_router.py  stockbit_broker.py
python/cloud/: __init__.py  cache.py  config.py  database.py  queue.py
python/collaboration/: __init__.py  shared_watchlist.py
python/currency/: __init__.py  currency_converter.py  exchange_rate.py
python/data_sources/: __init__.py  akshare_client.py  idx_bei_client.py  sentiment_client.py  yfinance_client.py  yfinance_websocket.py
python/fear_greed/: __init__.py  calculator.py  history.py
python/global/: __init__.py  compliance.py  payment_gateway.py
python/i18n/: __init__.py  locale_manager.py  translator.py
python/i18n/locales/: en.json  id.json  ms.json  th.json
python/integrations/: __init__.py  discord_bot.py  telegram_bot.py
python/marketplace/: __init__.py  analytics.py  billing.py  discovery.py  rating_system.py  revenue_sharing.py  strategy_manager.py
python/markets/: __init__.py  base_market.py  market_registry.py
python/markets/configs/: bursa.json  hose.json  idx.json  pse.json  set.json  sgx.json
python/monitoring/: __init__.py  health.py  metrics.py
python/quant/: __init__.py  backtest_engine.py  dcf_model.py  factor_analyzer.py  portfolio_optimizer.py  risk_metrics.py  signal_generator.py
python/scripts/: fetch_breadth.py  fetch_commodities.py  fetch_fear_greed.py  fetch_indices.py  fetch_news.py  fetch_regime.py  fetch_sectors.py  fetch_stock.py  fetch_top_movers.py  fetch_watchlist.py  generate_idx_tickers.py  tradingview_data.py  tradingview_ws.py
python/social/: __init__.py  copy_trading.py  follow_system.py  leaderboard.py  social_feed.py  user_profile.py
python/trading/: __init__.py  market_simulator.py  order_manager.py  paper_engine.py  pnl_calculator.py  position_tracker.py  risk_manager.py  trade_history.py
python/utils/: __init__.py  performance.py  websocket_stream.py
src/: main.cpp
src/core/ai/: impact_mapper.cpp  impact_mapper.h  llm_client.cpp  llm_client.h  news_scraper.cpp  news_scraper.h  sentiment_analyzer.cpp  sentiment_analyzer.h
src/core/common/: config.cpp  config.h  logger.h  types.h  utils.h
src/core/fear_greed/: calculator.cpp  calculator.h  multi_region.cpp  multi_region.h
src/core/market_data/: akshare_provider.cpp  akshare_provider.h  cache_manager.cpp  cache_manager.h  data_aggregator.cpp  data_aggregator.h  (+4 more)
src/tui/: app.cpp  app.h
src/ui/: CMakeLists.txt  main.cpp
src/ui/app/: MainWindow.cpp  MainWindow.h
src/ui/core/: DataManager.cpp  DataManager.h  PythonBridge.cpp  PythonBridge.h
src/ui/resources/: chart.html  resources.qrc
src/ui/ui/screens/: ChartScreen.cpp  ChartScreen.h  DashboardScreen.cpp  DashboardScreen.h  MarketOverviewScreen.cpp  MarketOverviewScreen.h  NewsScreen.cpp  NewsScreen.h  PortfolioScreen.cpp  PortfolioScreen.h  ScreenerScreen.cpp  ScreenerScreen.h  SettingsScreen.cpp  SettingsScreen.h
src/ui/ui/theme/: ThemeManager.cpp  ThemeManager.h  dark_theme.qss
src/ui/ui/widgets/: AIMarketRegimeWidget.cpp  AIMarketRegimeWidget.h  BottomBanner.cpp  BottomBanner.h  BreakingNewsTicker.cpp  BreakingNewsTicker.h  CandlestickChart.cpp  CandlestickChart.h  ChartToolbarWidget.cpp  ChartToolbarWidget.h  CommandBar.cpp  CommandBar.h  CommodityTable.cpp  CommodityTable.h  FearGreedGauge.cpp  FearGreedGauge.h  FinancialChart.cpp  FinancialChart.h  FooterWidget.cpp  FooterWidget.h  ForeignFlowWidget.cpp  ForeignFlowWidget.h  LightweightChartWidget.cpp  LightweightChartWidget.h  MarketBreadthWidget.cpp  MarketBreadthWidget.h  MarketIndexCard.cpp  MarketIndexCard.h  MarketIndicesStrip.cpp  MarketIndicesStrip.h  NavigationBar.cpp  NavigationBar.h  OrderBookWidget.cpp  OrderBookWidget.h  RunningTradeTicker.cpp  RunningTradeTicker.h  SectorHeatmap.cpp  SectorHeatmap.h  SectorPerformanceWidget.cpp  SectorPerformanceWidget.h  (+4 more)
static/: index.html
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_data_pipeline.py
tests/unit/: __init__.py  test_fear_greed.py  test_news_scraper.py  test_phase2_complete.py  test_phase2_quant.py  test_phase4_trading.py  test_sentiment.py  test_yfinance.py
(+49 files in other folders)
